--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <p>Put information about your application here. </p>
 
-    <p>https://github.com/kdav867/d424-capstone/blob/6bca6c19c97c3588c1af7837b121c487ab8e2e6e/com.companyname.c971.apk</p>
+    <p><a href="https://github.com/kdav867/d424-capstone/blob/6bca6c19c97c3588c1af7837b121c487ab8e2e6e/com.companyname.c971.apk">APK Link</a></p>
 
    <p>Add more content or delete code as desired.</p>
 
