--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     <h1>D424 Software Engineering Capstone</h1>
 
-    <p>Put information about your application here. </p>
+    <p>This is the hosting page for Kevin Davis' Capstone Project for D424</p>
 
     <p><a href="https://github.com/kdav867/d424-capstone/blob/b25dc507c189d3a5d49892c410a69d0c1246fdb2/com.D424KevinDavis.c971.apk">APK Link</a></p>
 
-   <p>Add more content or delete code as desired.</p>
+    <p>Please click the link above to be directed to the APK file that can be downloaded to load onto an Android Device of your choosing.</p>
 
 </body>
 
